fix(canary-web-components): adjust spacing between helper text and input field to match designs
Adjust spacing between helper text and input field in date picker and input to match the figma
designs

BREAKING CHANGE: Increase the size of the component overall

fix #2301

--- a/packages/canary-web-components/src/components/ic-date-input/ic-date-input.css
+++ b/packages/canary-web-components/src/components/ic-date-input/ic-date-input.css
@@ -1,5 +1,9 @@
 @import "../../../dist/core/normalize.css";
 
+:host {
+  --ic-input-label-helpertext-padding: var(--ic-space-xxs);
+}
+
 input {
   border: 0;
   height: 100%;
